Fix Java 12 deprecation warnings